--- a/StochasticSimulation/Practical1C++/P1Q1d)C++.ipynb
+++ b/StochasticSimulation/Practical1C++/P1Q1d)C++.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,8 @@
       "To check this, let us compute L * L.transpose()\n",
       "4 1\n",
       "1 4\n",
-      "This should equal the matrix A\n"
+      "This should equal the matrix A\n",
+      "We have generated 20583185 normals with covariance A.\n"
      ]
     }
    ],
