--- a/StochasticSimulation/LUCA_Practicals_1_Stochastic_Simulation.ipynb
+++ b/StochasticSimulation/LUCA_Practicals_1_Stochastic_Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,30 +11,21 @@
      "text": [
       "Requirement already satisfied: numpy in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (1.19.3)\n",
       "Requirement already satisfied: pandas in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (1.1.4)\n",
-      "Requirement already satisfied: numpy>=1.15.4 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from pandas) (1.19.3)\n",
       "Requirement already satisfied: pytz>=2017.2 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from pandas) (2020.1)\n",
+      "Requirement already satisfied: numpy>=1.15.4 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from pandas) (1.19.3)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from pandas) (2.8.1)\n",
       "Requirement already satisfied: six>=1.5 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
       "Requirement already satisfied: scipy in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (1.5.3)\n",
       "Requirement already satisfied: numpy>=1.14.5 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from scipy) (1.19.3)\n",
-      "Collecting matplotlib\n",
-      "  Downloading matplotlib-3.3.2-cp37-cp37m-macosx_10_9_x86_64.whl (8.5 MB)\n",
-      "\u001b[K     |████████████████████████████████| 8.5 MB 9.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: certifi>=2020.06.20 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (2020.6.20)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (2.8.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: matplotlib in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (3.3.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (1.2.0)\n",
+      "Requirement already satisfied: certifi>=2020.06.20 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (2020.6.20)\n",
       "Requirement already satisfied: numpy>=1.15 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (1.19.3)\n",
-      "Collecting kiwisolver>=1.0.1\n",
-      "  Downloading kiwisolver-1.2.0-cp37-cp37m-macosx_10_9_x86_64.whl (60 kB)\n",
-      "\u001b[K     |████████████████████████████████| 60 kB 4.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting pillow>=6.2.0\n",
-      "  Downloading Pillow-8.0.1-cp37-cp37m-macosx_10_10_x86_64.whl (2.2 MB)\n",
-      "\u001b[K     |████████████████████████████████| 2.2 MB 4.5 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting cycler>=0.10\n",
-      "  Downloading cycler-0.10.0-py2.py3-none-any.whl (6.5 kB)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from python-dateutil>=2.1->matplotlib) (1.15.0)\n",
-      "Installing collected packages: kiwisolver, pillow, cycler, matplotlib\n",
-      "Successfully installed cycler-0.10.0 kiwisolver-1.2.0 matplotlib-3.3.2 pillow-8.0.1\n"
+      "Requirement already satisfied: cycler>=0.10 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (8.0.1)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from matplotlib) (2.8.1)\n",
+      "Requirement already satisfied: six in /opt/anaconda3/envs/xeus-cling/lib/python3.7/site-packages (from cycler>=0.10->matplotlib) (1.15.0)\n"
      ]
     }
    ],
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,20 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 19.4 ms, sys: 5.36 ms, total: 24.7 ms\n",
-      "Wall time: 22.5 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
     "uniform_rvs = np.random.uniform(size = 10**6)"
    ]
   },
@@ -95,53 +76,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-- The mean and variance of a U(0, 1) variable is $\\frac{1}{2}$ and $\\frac{1}{12}$\n",
-    "\n",
-    "-- Sample mean 5% confidence interval $[\\mu-\\frac{\\sigma}{\\sqrt{n}}\\alpha_{97.5\\%}, \\mu + \\frac{\\sigma}{\\sqrt{n}}\\alpha_{97.5\\%}]$, $\\alpha$ is the standard Gaussian quantile.\n",
-    "\n",
-    "-- sample variance confidence interval $[\\sigma-\\frac{Std(\\sigma)}{\\sqrt{n}}\\xi_1, \\sigma + \\frac{Std(\\sigma)}{\\sqrt{n}}\\xi_2]$, $\\xi_1$ and $\\xi_2$ are corresponding $\\chi^2$ quantiles"
+    "The exact mean and variance of a U(0, 1) variable are $\\frac{1}{2}$ and $\\frac{1}{12}$, respectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.49943420713296194, 0.5005657928670381)"
+       "(0.5000699920138002, 0.08323372686015684)"
       ]
      },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.sqrt(1/12)/np.sqrt(len(uniform_rvs)) * stats.norm.ppf(0.975)\n",
-    "0.5 - a, 0.5 + a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Confidence interval for mean: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.4999182944076618, 0.08325274665167089)"
-      ]
-     },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (b) Covariance matrix and Cholesky factorization, to generate $1^2$ pairs of correlated Gaussian variables"
+    "### (b) Covariance matrix and Cholesky factorization, to generate $10^6$ pairs of correlated Gaussian variables"
    ]
   },
   {
@@ -234,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Converted by L, so that $Y = LX$ has covariance $\\Sigma = LL^T$"
+    "Then $Y = LX$ has covariance $\\Sigma = LL^T$."
    ]
   },
   {
@@ -265,7 +214,7 @@
    "source": [
     "### (c) Repeat previous exercise using PCA of $\\Sigma$\n",
     "\n",
-    "- The PCA $\\Sigma \\cdot V = V\\cdot\\Lambda$, where $V$ is the matrix of column eigen vectors, and $\\Lambda$ is the diagonal matrix of eigen values.\n",
+    "- The PCA $\\Sigma \\cdot V = V\\cdot\\Lambda$, where $V$ is the matrix of column eigenvectors, and $\\Lambda$ is the diagonal matrix of eigenvalues.\n",
     "\n",
     "- Take $Y = V\\sqrt{\\Lambda}X$, then $Y$ has variance $\\Sigma$."
    ]
@@ -366,72 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Code below uses the cholesky decomposition to generate 2d normals with the required covariance. In C++, we get 37 million such normal vectors in 1 minute, while in Python, only get about 320 000 in 1 minute. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# #include <iostream>\n",
-    "# #include <math.h>\n",
-    "# #include <Eigen>\n",
-    "# #include<chrono>\n",
-    "# #include <random>\n",
-    "# #include <boost/math/special_functions/erf.hpp>\n",
-    "\n",
-    "# using namespace Eigen;\n",
-    "# using namespace std;\n",
-    "\n",
-    "# double ICDFnormal(double p){\n",
-    "#     return -sqrt(2) * boost::math::erfc_inv(2*p);\n",
-    "# }\n",
-    "\n",
-    "# int main()\n",
-    "# {\n",
-    "#     std::random_device rd;  //Will be used to obtain a seed for the random number engine\n",
-    "#     std::mt19937 gen(rd()); //Standard mersenne_twister_engine seeded with rd()\n",
-    "#     std::uniform_real_distribution<> dis(0.0, 1.0);\n",
-    "#     int n=1;\n",
-    "\n",
-    "#     Matrix2d A;\n",
-    "#     A << 4,1,1,4;\n",
-    "#     cout << \"The matrix A is\" << endl << A << endl;\n",
-    "\n",
-    "#     LLT<Matrix2d> lltOfA(A); // compute the Cholesky decomposition of A\n",
-    "#     Matrix2d L = lltOfA.matrixL(); // retrieve factor L  in the decomposition\n",
-    "\n",
-    "#     cout << \"The Cholesky factor L is\" << endl << L << endl;\n",
-    "#     cout << \"To check this, let us compute L * L.transpose()\" << endl;\n",
-    "#     cout << L * L.transpose() << endl;\n",
-    "#     cout << \"This should equal the matrix A\";\n",
-    "\n",
-    "#     std::chrono::steady_clock::time_point start = std::chrono::steady_clock::now();\n",
-    "#     int counter=0;\n",
-    "#     while(std::chrono::steady_clock::now() - start <= std::chrono::seconds(60))\n",
-    "#     {\n",
-    "#         MatrixXf w(2,n);\n",
-    "#         for(int i=0; i<n; i++){\n",
-    "#             Vector2d tempMat;\n",
-    "#             tempMat << ICDFnormal(dis(gen)), ICDFnormal(dis(gen));\n",
-    "#             Vector2d tempVec;\n",
-    "#             tempVec << L*tempMat;\n",
-    "#             w(0,i) = tempVec(0,0);\n",
-    "#             w(1, i) = tempVec(1, 0);\n",
-    "#             // To check we are indeed generating normals\n",
-    "#             //double temp = dis(gen);\n",
-    "#             //cout << temp << endl;\n",
-    "#             //cout << ICDFnormal(temp) << endl;\n",
-    "#             //cout << 0.5 * boost::math::erfc(-(ICDFnormal(temp))/(sqrt(2))) << endl;\n",
-    "#         }\n",
-    "#         counter+=1;\n",
-    "#     }\n",
-    "#     cout << \"We have generated \" + std::to_string(counter) + \" normals with covariance sigma.\"<< endl;\n",
-    "# }\n"
+    "We use the Cholesky decomposition to generate 2d normals with the required covariance. In C++ (see Practical1C++ folder for the code), we are able to generate about 20 million such normal vectors in 1 minute, while in Python, we can only generate about 120 000 such normal vectors."
    ]
   },
   {
@@ -492,19 +376,19 @@
    "source": [
     "## Problem 2\n",
     "\n",
-    "$ \\bar{f} = \\mathbb{E}[f(U)]=\\int_0^1f(U)dU $\n",
+    "$ \\bar{f} = \\mathbb{E}[f(U)]=\\int_0^1f(U)dU$.\n",
     "\n",
-    "$f(x) = x\\cos(\\pi x)$"
+    "$f(x) = x\\cos(\\pi x)$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a) Analytically the mean equals $\\bar{f}=\\frac{\\pi\\sin(\\pi)+\\cos(\\pi)-1}{\\pi^2}=-\\frac{2}{\\pi^2}\\approx-0.20264236728467552$\n",
+    "### (a) Analytically the mean equals $\\bar{f}=\\frac{\\pi\\sin(\\pi)+\\cos(\\pi)-1}{\\pi^2}=-\\frac{2}{\\pi^2}\\approx-0.20264236728467552$.\n",
     "\n",
     "### Analytical variance:\n",
-    "$\\sigma^2 = \\int_0^1(f(U)-\\bar{f})^2dU = \\frac{1}{6} + \\frac{1}{4\\pi^2} - \\frac{4}{\\pi^4}$"
+    "$\\sigma^2 = \\int_0^1(f(U)-\\bar{f})^2dU = \\frac{1}{6} + \\frac{1}{4\\pi^2} - \\frac{4}{\\pi^4}$."
    ]
   },
   {
@@ -532,7 +416,7 @@
    "source": [
     "### (b & c) CDF plotting\n",
     "\n",
-    "From CLT, the normal distribution is $N(\\mu, \\frac{\\sigma^2}{m})$"
+    "From CLT, the normal distribution is $N(\\mu, \\frac{\\sigma^2}{m})$."
    ]
   },
   {
@@ -612,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,14 +505,13 @@
     "    rvs   = f(unifs, **kwargs)\n",
     "    mean, var   = rvs.mean(), rvs.var(ddof = 1)\n",
     "    exact_mean  = mean if exact_mean is None else exact_mean\n",
-    "#     low, high = exact_mean - 3 * np.sqrt(var/N), exact_mean + 3 * np.sqrt(var/N)\n",
     "    low, high = mean - 3 * np.sqrt(var/N), mean + 3 * np.sqrt(var/N) # s.d. from estimator\n",
     "    return mean, low, high"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,15 +705,6 @@
     "df_sum_call = empiricalConfidenceIntervals(payoff_call, call_true)\n",
     "df_sum_call.plot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1048,7 +922,7 @@
     "## Problem 5. Importance Sampling for Digital Put Options\n",
     "\n",
     "\n",
-    "$P = \\exp(-rT)H(K - S_T)$"
+    "$P = \\exp(-rT)H(K - S_T).$"
    ]
   },
   {
@@ -1185,7 +1059,7 @@
    "source": [
     "### (b) With importance sampling (Or rather stratified sampling?), making half of the sample stock price below/above the strike.\n",
     "\n",
-    "### The threshold for uniform r.v.s is $\\bar{U} = N(\\frac{\\log(\\frac{S_0}{K}) + (r - \\frac{\\sigma^2}{2})T}{\\sigma\\sqrt{T}}) = N(d_2)$"
+    "### The threshold for uniform r.v.s is $\\bar{U} = N\\left(\\frac{\\log(\\frac{S_0}{K}) + (r - \\frac{\\sigma^2}{2})T}{\\sigma\\sqrt{T}}\\right) = N(d_2)$"
    ]
   },
   {
@@ -1295,7 +1169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: Seems only need 750 samples to reach 10% accuracy"
+    "Conclusion: by inspection, we only need about 750 samples to reach 10% accuracy."
    ]
   },
   {
